--- a/main.css
+++ b/main.css
@@ -15,7 +15,6 @@ body {
 
 nav {
     height: 50px;
-    border: 2px white solid;
     margin: 5px;
     color: white;
     display: flex;
@@ -47,14 +46,15 @@ nav div {
 }
 
 main {
-    border: 2px white solid;
     margin: 5px;
 }
 
 .main-title, .question {
     height: 100px;
-    border: 2px white solid;
     margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
@@ -62,8 +62,10 @@ h1 {
     text-align: center;
     color: white;
     width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+h1 div {
+    display: inline-block;
 }
 
 .quiz-question {
@@ -84,21 +86,45 @@ p.teaser {
 
 .subtitle, .answers {
     height: 230px;
-    border: 2px white solid;
     margin: 5px;
 }
 
-form {
+.answer-form {
     margin-left: auto;
     margin-right: auto;
-    text-align: center;
+    text-align: left;
+    width: 100%;
+    height: 230px;
 }
 
-button.start-quiz, button.submit-answer {
+.answer-option {
+    display: block;
+    background-color: rgba(0, 0, 255, 0.4);
+    height: 25%;
+    width: 100%;
+    border-radius: 5px;
+    border: 2px black solid;
+    font-size: 25px;
+    color: white;
+    padding: 10px;
+}
+
+.answer-option:hover {
+    background-color: blue;
+}
+
+input[type="radio"] {
+    margin-right: 10px;
+    vertical-align: middle;
+    width: 25px;
+    height: 25px;
+}
+
+button.start-quiz, button.submit-answer, button.next-question {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5px;
+    margin-top: 20px;
     height: 75px;
     width: 250px;
     border-radius: 10px;
@@ -107,24 +133,45 @@ button.start-quiz, button.submit-answer {
     color: darkgray;
 }
 
-button.submit-answer {
-    display: none;
+button.next-question {
+    background-color: darkorange;
+    color: black;
 }
 
-button.start-quiz:hover, button.submit-answer:hover {
+button.start-quiz:hover, button.submit-answer:hover, button.next-question:hover {
     background-color: lightblue;
     color: black;
 }
 
+button.next-question:hover {
+    background-color: yellow;
+}
+
 .start, .feedback {
-    height: 150px;
-    border: 2px white solid;
+    min-height: 150px;
     margin: 5px;
+    color: white;
+}
+
+h3 {
+    text-align: center;
+    font-size: 40px;
+}
+
+h4 {
+    text-align: center;
+    font-size: 20px;
+}
+
+img.correct-picture, img.wrong-picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 footer {
     height: 65px;
-    border: 2px white solid;
     margin: 5px;
     text-align: center;
     color: white;
@@ -158,6 +205,10 @@ audio {
         font-size: 65px;
     }
     
+    .quiz-question {
+        font-size: 40px;
+    }
+
     p.teaser {
         font-size: 40px;
         width: 75%;
@@ -166,7 +217,21 @@ audio {
     .subtitle, .answers {
         height: 400px;
     }
-    
+
+    .answer-form {
+        width: 70%;
+        height: 400px;
+    }
+
+    .answer-option {
+        font-size: 50px
+    }
+
+    input[type="radio"] {
+        width: 30px;
+        height: 30px;
+    }
+
     button.start-quiz, button.submit-answer {
         height: 100px;
         width: 300px;
@@ -174,9 +239,21 @@ audio {
     }
     
     .start, .feedback {
-        height: 250px;
+        min-height: 250px;
     }
     
+    h3 {
+        font-size: 50px;
+    }
+    
+    h4 {
+        font-size: 30px;
+    }
+
+    img.correct-picture, img.wrong-picture {
+        width: 50%;
+    }
+
     footer {
         height: 100px;
         font-size: 25px;
@@ -206,6 +283,10 @@ audio {
         width: 100%;
     }
     
+    .quiz-question {
+        font-size: 50px;
+    }
+
     p.teaser {
         font-size: 60px;
         width: 60%;
@@ -214,8 +295,25 @@ audio {
     .subtitle, .answers {
         height: 425px;
     }
-    
+
+    .answer-form {
+        width: 50%;
+        height: 420px;
+    }
+
     .start, .feedback {
-        height: 275px;
+        min-height: 275px;
+    }
+
+    h3 {
+        font-size: 60px;
+    }
+    
+    h4 {
+        font-size: 40px;
+    }
+
+    img.correct-picture, img.wrong-picture {
+        width: 30%;
     }
 }
